# orchestrator

./: .editorconfig  .env.example  .gitignore  .gitleaks.toml  .orchestrator.example.yml  .orchestrator.yml  .security-audit-ignore  .shellcheckrc  AGENTS.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  REVIEW.md  config.example.yml  jobs.example.yml  justfile  skills.yml  specs.md  tasks.example.yml  tasks.yml
.beads/: issues.jsonl  metadata.json
.semgrep/: shell-security.yml
Formula/: orch.rb  orchestrator.rb
contexts/: response-1.md  route-response-1.md  route-response-2.md  task-2.md
docs/: CNAME  config.toml  index.html  plan-beads-integration.md  plan-github-native.md  plan-tmux-sessions.md  style.css  workflow.md
prompts/: agent.md  chat.md  plan.md  plan_chat.md  pr_review.md  review.md  route.md  system.md
scripts/: add_task.sh  agents.sh  backend.sh  backend_github.sh  beads.sh  chat.sh  chat_lib.sh  cleanup_worktrees.sh  create-pr.sh  cron_match.py  dashboard.sh  db.sh  gh_mentions.sh  gh_project_apply.sh  gh_project_create.sh  gh_project_info.sh  gh_project_list.sh  gh_pull.sh  gh_push.sh  gh_sync.sh  import_sqlite_to_beads.sh  init.sh  jobs_add.sh  jobs_disable.sh  jobs_enable.sh  jobs_info.sh  jobs_install.sh  jobs_list.sh  jobs_remove.sh  jobs_tick.sh  jobs_uninstall.sh  lib.sh  list_tasks.sh  make-pr-body.sh  migrate_to_sqlite.sh  next.sh  normalize_json.py  output.sh  path.sh  plan_chat.sh  (+27 more)
src/: cron.rs  db.rs  main.rs  parser.rs  security.rs  sidecar.rs  tmux.rs
tests/: gh_mock.sh  orchestrator.bats  test_cleanup_worktrees.bats  (+6 more)
(+54 files in other folders)
